# navigator-orchestrator

./: .gitignore  Containerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  kind-e2e.yml
deploy/kustomize/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
deploy/kustomize/overlays/kind/: config-patch.yaml  deployment-patch.yaml  service-patch.yaml
deploy/kustomize/overlays/openshift/: deployment-patch.yaml  kustomization.yaml  route.yaml
src/navigator_orchestrator/: __init__.py  __main__.py  auth.py  config.py  mcp_client.py  passthrough.py  server.py
src/navigator_orchestrator/workflows/: __init__.py  engine.py  model_recommendation.py  registry.py  types.py
tests/: conftest.py  test_auth.py  test_config.py  test_mcp_client.py  test_passthrough.py  test_server.py
tests/workflows/: test_engine.py  test_model_recommendation.py  test_registry.py  test_types.py
